# dezzy

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TASKS.md
crates/dezzy-backend/: Cargo.toml
crates/dezzy-backend-cpp/: Cargo.toml
crates/dezzy-backend-cpp/src/: codegen.rs  expr_codegen.rs  lib.rs  templates.rs
crates/dezzy-backend/src/: lib.rs  plugin.rs  traits.rs  wasm.rs
crates/dezzy-cli/: Cargo.toml
crates/dezzy-cli/src/: main.rs
crates/dezzy-core/: Cargo.toml
crates/dezzy-core/src/: expr.rs  hir.rs  lib.rs  lir.rs  pipeline.rs  topo_sort.rs
crates/dezzy-parser/: Cargo.toml
crates/dezzy-parser/src/: error.rs  expr_parser.rs  lib.rs  parser.rs  schema.rs
docs/: ADR-001-dezzy-initial-architecture.md  ADR-002-repeating-structures.md  architecture.md  phase-7-2-3-padding-bitfields.md  phase-9-conditional-parsing.md  phase-9-known-limitations.md  png-zip-requirements.md  real-world-formats.md  roadmap.md
examples/: binary_log.yaml  circular.yaml  conditional.hpp  conditional.yaml  conditional_simple.hpp  conditional_simple.py  conditional_simple.yaml  container.yaml  generate_test_png.py  generate_test_zip.py  nested.yaml  nested_reversed.yaml  png.yaml  png_chunk.yaml  png_file.yaml  png_ihdr.hpp  png_ihdr.py  png_ihdr.yaml  png_simple.yaml  simple.yaml  test_assert.hpp  test_assert.py  test_assert.yaml  test_assert_runner.cpp  test_assert_runner.py  test_binary_log.py  test_bitfields.h  test_bitfields.yaml  test_bitfields_runner.cpp  test_container.cpp  test_container.hpp  test_container.py  test_container.yaml  test_container_runner.cpp  test_enum.hpp  test_enum.py  test_enum.yaml  test_enum_run.py  test_nested.cpp  test_packed_format.h  (+16 more)
examples/png_chunk_py/: pngchunk.py
plugins/: manifest.toml
plugins/python/: Cargo.toml
plugins/python/src/: expr_codegen.rs  lib.rs
tests/: integration_test.rs
wit/: backend.wit
