[package]
name = "dezzy-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dezzy-core = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
ariadne = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
